data/derived/fa15/progs/unify/prog1637.ml.out
Characters 97-113:
  | h::t -> if List.mem(h,seen) then helper(seen',t)
               ^^^^^^^^^^^^^^^^
Error: This expression has type ('a * 'b) list -> bool
       but an expression was expected of type bool
